--- a/SwiftStock(Redo)/Pages/Admin.cshtml
+++ b/SwiftStock(Redo)/Pages/Admin.cshtml
@@ -123,7 +123,7 @@
 
         <div id="sales" class="section" style="display:none;">
             <h2>Sales</h2>
-            <div class="chart" id="salesChart"></div>
+            <a asp-page="/Sales"></a>
         </div>
 
         <div id="inventory" class="section" style="display:none;">
